syntax = "proto3";

option csharp_namespace = "Protos.Pets.GetMyPets";

package getmypets;

message GetMyPetsRequest {
}
