syntax = "proto3";

option csharp_namespace = "Protos.Pets.GetPetTypes";

package getpettypes;

message GetPetTypesResponse {
  repeated PetTypeDto PetTypes = 1;
}

message PetTypeDto {
  string Id = 1;
  string UserId = 2;
  string Name = 3;
  string Description = 4;
}
